--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "cookie <jung_dj@kaist.ac.kr>",
   "license": "MIT",
   "dependencies": {
-    "knex": "^0.16.5"
+    "knex": "^0.16.5",
+    "mysql": "^2.17.1"
   }
 }
