--- a/package.json
+++ b/package.json
@@ -4,8 +4,19 @@
   "main": "index.js",
   "author": "cookie <jung_dj@kaist.ac.kr>",
   "license": "MIT",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
   "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "debug": "^4.1.1",
+    "express": "^4.16.4",
+    "express-session": "^1.16.1",
+    "http-errors": "^1.7.2",
     "knex": "^0.16.5",
-    "mysql": "^2.17.1"
+    "mysql": "^2.17.1",
+    "pug": "^2.0.3",
+    "underscore": "^1.9.1"
   }
 }
