--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-session": "^1.16.1",
     "http-errors": "^1.7.2",
     "knex": "^0.16.5",
+    "morgan": "^1.9.1",
     "mysql": "^2.17.1",
     "pug": "^2.0.3",
     "underscore": "^1.9.1"
